Table users {
id bigint [pk, increment]
name varchar
email varchar [unique]
password varchar
phone varchar
otp varchar
email_verified_at timestamp
is_active boolean
created_at timestamp
updated_at timestamp
}

Table roles {
id bigint [pk, increment]
name varchar
}

Table user_roles {
id bigint [pk, increment]
user_id bigint
role_id bigint
}

Table projects {
id bigint [pk, increment]
title varchar
slug varchar [unique]
description text
content text
featured boolean
demo_url varchar
repository_url varchar
thumbnail_id bigint
published_at timestamp
created_at timestamp
updated_at timestamp
}

Table project_images {
id bigint [pk, increment]
project_id bigint
media_id bigint
}

Table blog_posts {
id bigint [pk, increment]
title varchar
slug varchar [unique]
excerpt text
content text
featured_image_id bigint
author_id bigint
status varchar
published_at timestamp
created_at timestamp
updated_at timestamp
}

Table categories {
id bigint [pk, increment]
name varchar
slug varchar
}

Table blog_post_categories {
id bigint [pk, increment]
post_id bigint
category_id bigint
}

Table tags {
id bigint [pk, increment]
name varchar
slug varchar
}

Table blog_post_tags {
id bigint [pk, increment]
post_id bigint
tag_id bigint
}

Table skills {
id bigint [pk, increment]
name varchar
category varchar
level int
icon varchar
sort_order int
}

Table testimonials {
id bigint [pk, increment]
name varchar
position varchar
company varchar
content text
avatar_id bigint
featured boolean
created_at timestamp
}

Table media {
id bigint [pk, increment]
file_name varchar
file_path varchar
mime_type varchar
size int
created_at timestamp
}

Table settings {
id bigint [pk, increment]
key varchar [unique]
value text
}

Ref: user_roles.user_id > users.id
Ref: user_roles.role_id > roles.id

Ref: blog_posts.author_id > users.id

Ref: blog_posts.featured_image_id > media.id
Ref: projects.thumbnail_id > media.id

Ref: project_images.project_id > projects.id
Ref: project_images.media_id > media.id

Ref: blog_post_categories.post_id > blog_posts.id
Ref: blog_post_categories.category_id > categories.id

Ref: blog_post_tags.post_id > blog_posts.id
Ref: blog_post_tags.tag_id > tags.id

Ref: testimonials.avatar_id > media.id
